@@ -1,5 +1,10 @@
 2016-08-18  Natalia Portillo  <claunia@claunia.com>
 
+	* LisaRoman.cs: Added missing XML documentation and emptied
+	webname.
+
+2016-08-18  Natalia Portillo  <claunia@claunia.com>
+
 	* Encoding.cs:
 	* Pangrams.cs:
 	* LisaRoman.cs:
